--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "barryvdh/laravel-cors": "^0.11.4",
         "cartalyst/sentinel": "^3.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
