--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "cartalyst/sentinel": "^3.0",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "1.0.*"
